Settings to accommodate replacement of IDE from PHPStorm to Visual Studio Code.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-.idea/
-vendor/
-build/
-thirdparty/
-log/
+.vscode/
+/vendor/
+/build/
+/thirdparty/
+/log/
 .svn/
-svn/trunk/
-svn/tags/
-svn/branches/
+/svn/trunk/
+/svn/tags/
+/svn/branches/
+*.code-workspace
