--- a/composer.json
+++ b/composer.json
@@ -8,17 +8,11 @@
     "Catenis",
     "blockchain"
   ],
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/claudiosdc/Pawl.git"
-    }
-  ],
   "require": {
     "php": ">=5.6.0",
     "ext-posix": "*",
-    "ratchet/pawl": "dev-Fix",
-    "blockchainofthings/catenis-api-client": "^1.0.3",
+    "ratchet/pawl": "^0.3.4",
+    "blockchainofthings/catenis-api-client": "^2.1.1",
     "react/event-loop": "^1.0"
   },
   "license": "MIT",
