--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
   "require": {
     "php": ">=5.6.0",
     "ext-posix": "*",
+    "ext-pcntl": "*",
     "ratchet/pawl": "^0.3.4",
-    "blockchainofthings/catenis-api-client": "^2.1.2",
-    "react/event-loop": "^1.0"
+    "blockchainofthings/catenis-api-client": "^2.1.3",
+    "react/event-loop": "^1.0",
+    "react/stream": "^1.1.0"
   },
   "license": "MIT",
   "authors": [
